# BumperDetection

./: .gitignore  BUGS.md  CMakeLists.txt  GPU.cpp  LICENSE  PERFORMANCE.md  README.md  TODO.md  config.json  config.txt  edgeDetection.cpp  edgeDetection.h  install__documentation.txt  kalmanFilter.cpp  kalmanFilter.h  log.txt  main.cpp  run_yolo.sh  yolomodel.cpp  yolomodelgpu.cpp
install/: README.md  readme.md
src/: GPU.cpp  GPU.h  analyzeDetections.cpp  analyze_detections.cpp  analyze_detections.h  bumper_detector.cpp  config_extraction.cpp  config_extraction.h  debug_log.cpp  debug_log.h  edgeDetection.cpp  edgeDetection.h  kalmanFilter.cpp  kalman_filter.cpp  kalman_filter.h  log_to_file.cpp  log_to_file.h  main.cpp  receive_data.cpp  receive_data.h  robotTracking.cpp  robotTracking.h  send_data.cpp  send_data.h  setupGPU.cpp  thread_manager.h  topDownView.cpp  topDownView.h  top_down_view.cpp  yolomodelgpu.cpp  yolomodelgpu.h
